Boarding craft scene can now move soldier between boarding craft collection and barracks collection, fixed small visual bug in ui and canvas spacing

--- a/ui_style.css
+++ b/ui_style.css
@@ -34,6 +34,7 @@
     grid-column: 2 / 10;
     grid-row: 6 / 8;
     display: none;
+    margin-top: -4px;
 }
 
 #info-ui {
